app/renderer/main.css
/* ... */
.sidebar .footer.showingForm {
  height: 120px;
  bottom: 0;
  /*transition: height 3s;/*0.2s;*/
}


.sidebar .footer .add-include-button {
  position: absolute;
  top: 0;
  left: 5px;
  right: 5px;
  width: auto;
  line-height: 15px;
  color: #CCC;
  opacity: 1.0;
  transition: opacity 0.2s;
}

.sidebar .footer.showingForm .add-include-button {
  opacity: 0;
  pointer-events: none;
}

.sidebar .footer .add-include-button .icon {
  position: relative;
  top: 4px;
  font-size: 18pt;
  color: #AAA;
  padding-left: 5px;
  padding-right: 5px;
}

.sidebar .footer .add-include-button:hover,
.sidebar .footer .add-include-button:hover .icon {
  color: #666;
}

.sidebar .footer:not(.showingForm) .new-include-form {
  position: absolute;
  width: 100%;
  height: 100%;

}

.sidebar .footer .new-include-form {
  opacity: 1.0;
  transition: opacity 0.2s;
}

.sidebar .footer:not(.showingForm) .new-include-form {
  opacity: 0.0;
  pointer-events: none;
}

.sidebar .footer h5 {
  padding: 5px;
  margin: 0;
  font-size: 10pt;
}

.sidebar .footer .inputWrapper {
  position: relative;
  display: block;
  margin-left: 5px;
  margin-right: 5px;
  width: auto;
  height: 30px;
}

.sidebar .footer input[type="text"] {
  width: 100%;
  height: 100%;
  margin: 0;
}

.sidebar .footer input[type="text"].error {
  outline-color: #feb3b3;
  outline-style: solid;
}

.sidebar .footer .add-to-main-ink {
  position: relative;
  height: 20px;
  margin-top: 3px;
  margin-bottom: 5px;
  min-width: 180px;
  margin-left: 6px;
}

.sidebar .footer .add-to-main-ink input {
  right: 6px;
}

.sidebar .footer .add-to-main-ink span {
  float: right;
  margin-right: 25px;
}

.sidebar .footer .form-buttons {
  position: relative;
  display: block;
  height: 30px;
  min-width: 180px;
  margin-right: 3px;
}

.sidebar .footer .form-buttons .btn {
  margin-left: 2px;
  margin-right: 2px;
  width: 80px;
}

.twopane {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
}

#main {
  display: block;
  position: absolute;
  top: 56px;
  left: 0;
  right: 0;
  bottom: 0;
  background: white;
}

.win32 #main, .linux #main {
  top: 34px;
}

#editor {
  display: block;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 50%;
}

#editor .ace-error {
  background: #ffd1d1;
  position:absolute;
}

#editor .ace_gutter-cell.ace_error {
  background-image: url("img/error-icon.png");
  background-size: 11px 11px;
  background-repeat: no-repeat;
  background-position: left 2px top 2px;
}

#editor .ace-warning {
  background: #f2ad2b;
  position:absolute;
}

#editor .ace-todo {     /* issue from compiler */
  position:absolute;
}

#editor .ace-todo,      /* issue from compiler */
#editor span.ace_todo   /* syntax highlighter */
{
  background: #bffff1;
}

#editor .ace_gutter-layer {
  background: white;
  border-right: none;
}

#editor .ace_gutter-layer .ace_gutter-cell {
  color: #CCC;
}

#editor .ace_tooltip {
  font-family: Helvetica, sans-serif;
  padding: 7px;
  border: 1px solid #DDD;
  border-radius: 4px;
  background: #F8F8F8;
  box-shadow: 0 3px 5px 0px rgba(0,0,0,0.1);
}

#editor span.ace_divert.ace_target,
#editor span.ace_include.ace_filepath {
  text-decoration: underline;
}

/* Hide cursor in unfocussed editor view */
.ace_hidden-cursors {
  opacity:0
}

/* Hide other marks (e.g. bracket matchers) in unfocussed editor view */
.ace_editor:not(.ace_focus) .ace_marker-layer .ace_bracket {
  opacity: 0;
}

#player {
  display: block;
  position: absolute;
  top: 0;
  bottom: 0;
  right: 0;
  left: 50%;
  font-family: system-ui, -apple-system, Geneva, sans-serif;
  font-weight: 400;
  font-size: 14pt;
  color: #555;
}

#player .innerText {
  position: relative;
  padding: 10px 0 50px 0;
  margin: 0;
}

#player .innerText p {
  padding: 0 40px 0 40px;
}

#player .innerText p.customInstruction {
  color: rgb(179, 94, 94);
  font-family: Monaco, 'Courier New', monospace;
}

#player.altKey .innerText p span:hover {
  text-decoration: underline;
  cursor: pointer;
}

#player .hiddenBuffer {
  opacity: 0;
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  overflow: scroll;
}


#player hr {
  border: 0;
  border-top: 1px solid #CCC;
  width: 100%;
  margin: 0 auto;
}

#player p.choice {
  text-align: center;
}

#player p.choice a {
  color: #BBB;
  transition: color 0.2s;
  text-decoration: none;
}

#player p.choice a:hover {
  color: #555;
  text-decoration: underline;
}

#player p.tags, #player p.choice .tags {
  color: #AAA;
  text-align: center;
  font-family: monospace;
}

#player p.choice .tags {
  padding-left: 1em;
}

#main.hideTags #player p.tags,
#main.hideTags #player p.choice .tags {
    display: none;
}

#player p.end {
  font-weight: bold;
  text-align: center;
}

#player p.error, #player p.error a {
  font-weight: bold;
  color: #C56D6D;
  font-size: 10pt;
  text-align: center;
  font-weight: normal;
}

#player p.error a:hover {
  color: black;
}

#player pre {
  padding-left: 10px;
  white-space: pre-wrap;
  font-size: 9pt;
  font-weight: normal;
}

#player pre.error {
  color: #C56D6D;
}
#player pre.diagnostic {
  color: gray;
}

#player .expressionWatch {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  background: white;
  z-index: 1;
}

#player .scrollContainer {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  overflow-y: scroll;
  overflow-x: auto;
}

#player .expressionWatch td {
  /*background: red;*/
  border-bottom: 1px solid #DDD;
}

#player td.expressionLabel {
  background: #FBFBFB;
  color: #878787;
  width: 10%;
  min-width: 80px;
  text-align: right;
  border-right: 1px solid #DDD;
  padding-right: 5px;
  cursor: default;
  -webkit-user-select: none;
}

#player td.expressionInput {
  background: white;
  padding: 0;
  padding-left: 5px;
  position: relative;
}
/* ... */

